task1/test_results_defects/infer_test/data_overflow/report.txt
#0
/home/cs4239/Desktop/cs5218/Benchmarks/01.w_Defects/data_overflow.c:48: error: Integer Overflow L1
  (2147483647 + 1):signed32.
  46. 	int max = 0x7fffffff;
  47. 	int ret;
  48. 	ret = max + 1;/*Tool should detect this line as error*/ /*ERROR:Data Overflow*/
       ^
  49.         sink = ret;
  50. }

#1
/home/cs4239/Desktop/cs5218/Benchmarks/01.w_Defects/data_overflow.c:96: error: Integer Overflow L1
  (4294967295 + 1):unsigned32.
  94. 	unsigned int max = 0xffffffff;
  95. 	unsigned int ret;
  96. 	ret = max + 1;/*Tool should detect this line as error*/ /*ERROR:Data Overflow*/
       ^
  97.         sink = ret;
  98. }

#2
/home/cs4239/Desktop/cs5218/Benchmarks/01.w_Defects/data_overflow.c:152: error: Integer Overflow L1
  (2147483647 + 1):signed32.
  150. 	int max = 0x7fffffff;
  151. 	int ret;
  152. 	max ++;
        ^
  153. 	ret = max;/*Tool should detect this line as error*/ /*ERROR:Data Overflow*/
  154.         sink = ret;

#3
/home/cs4239/Desktop/cs5218/Benchmarks/01.w_Defects/data_overflow.c:165: error: Integer Overflow L1
  (2147483520 + 128):signed32.
  163. 	int max = 0x7fffff80;
  164. 	int ret;
  165. 	ret = max + 128;/*Tool should detect this line as error*/ /*ERROR:Data Overflow*/
        ^
  166.         sink = ret;
  167. }

#4
/home/cs4239/Desktop/cs5218/Benchmarks/01.w_Defects/data_overflow.c:177: error: Integer Overflow L1
  (1073741824 × 2):signed32.
  175. 	int max = 0x40000000;
  176. 	int ret;
  177. 	ret = max * 2;/*Tool should detect this line as error*/ /*ERROR:Data Overflow*/
        ^
  178.         sink = ret;
  179. }

#5
/home/cs4239/Desktop/cs5218/Benchmarks/01.w_Defects/data_overflow.c:190: error: Integer Overflow L1
  (2147483647 + 1):signed32.
  188. 	int d = 1;
  189. 	int ret;
  190. 	ret = max + d;/*Tool should detect this line as error*/ /*ERROR:Data Overflow*/
        ^
  191.         sink = ret;
  192. }

#6
/home/cs4239/Desktop/cs5218/Benchmarks/01.w_Defects/data_overflow.c:216: error: Integer Overflow L1
  (2147483645 + 3):signed32.
  214. 	int max = 429496729;
  215. 	int ret;
  216. 	ret = (5 * max) + 3; /*Tool should detect this line as error*/ /*ERROR:Data Overflow*/
        ^
  217.         sink = ret;
  218. }

#7
/home/cs4239/Desktop/cs5218/Benchmarks/01.w_Defects/data_overflow.c:228: error: Integer Overflow L1
  (2147395600 + 88048):signed32.
  226. 	int max = 46340;
  227. 	int ret;
  228. 	ret = (max * max) + 88048; /*Tool should detect this line as error*/ /*ERROR:Data Overflow*/
        ^
  229.         sink = ret;
  230. }

#8
/home/cs4239/Desktop/cs5218/Benchmarks/01.w_Defects/data_overflow.c:245: error: Integer Overflow L1
  (2147483647 + 1):signed32.
  243. 	int max = 0x7fffffff;
  244. 	int ret;
  245. 	ret = max + data_overflow_018_func_001(); /*Tool should detect this line as error*/ /*ERROR:Data Overflow*/
        ^
  246.         sink = ret;
  247. }

#9
/home/cs4239/Desktop/cs5218/Benchmarks/01.w_Defects/data_overflow.c:263: error: Integer Overflow L1
  (2147483647 + 1):signed32 by call to `data_overflow_019_func_001`.
  261. void data_overflow_019 ()
  262. {
  263. 	data_overflow_019_func_001(1);
        ^
  264. }
  265. 

#10
/home/cs4239/Desktop/cs5218/Benchmarks/01.w_Defects/data_overflow.c:275: error: Integer Overflow L2
  (2147483647 + [-2, 1]):signed32.
  273. 	int dlist[4] = {0, 1, -2, -1};
  274. 	int ret;
  275. 	ret = max + dlist[1]; /*Tool should detect this line as error*/ /*ERROR:Data Overflow*/
        ^
  276.         sink = ret;
  277. }

#11
/home/cs4239/Desktop/cs5218/Benchmarks/01.w_Defects/data_overflow.c:290: error: Integer Overflow L1
  (2147483647 + 1):signed32.
  288. 	int ret;
  289. 	d1 = d;
  290. 	ret = max + d1; /*Tool should detect this line as error*/ /*ERROR:Data Overflow*/
        ^
  291.         sink = ret;
  292. }

#12
/home/cs4239/Desktop/cs5218/Benchmarks/01.w_Defects/data_overflow.c:307: error: Integer Overflow L1
  (2147483647 + 1):signed32.
  305. 	d1 = d;
  306. 	d2 = d1;
  307. 	ret = max + d2; /*Tool should detect this line as error*/ /*ERROR:Data Overflow*/
        ^
  308.         sink = ret;
  309. }

#13
/home/cs4239/Desktop/cs5218/Benchmarks/01.w_Defects/data_overflow.c:318: error: Integer Overflow L1
  (2147483647 + 1):signed32.
  316. {
  317. 	int ret;
  318. 	ret = 0x7fffffff + 1; /*Tool should detect this line as error*/ /*ERROR:Data Overflow*/
        ^
  319.         sink = ret;
  320. }

Found 14 issues
                Issue Type(ISSUED_TYPE_ID): #
  Integer Overflow L1(INTEGER_OVERFLOW_L1): 13
  Integer Overflow L2(INTEGER_OVERFLOW_L2): 1
